# v0.23.10
- added MakeReadable() which cleans up vignette source files from installed packages, by converting tabs to spaces and Linux line breaks to Windows line breaks. Thi currently requires Python 2.7 to be installed.
-

# v0.23.9
- added NewFunction() for creating a template R script file for a new function including Roxygen comment lines.
- fixed spacing problems in the output messages for MakeRmd()
- added constraint that some version of Python must be installed for WriteR() to work.
- added scope for WriteR() to call a file name for a file that does not yet exist. The file is created and then the application opens.
- added library(BrailleR) to first chunk created by UniDesc() and ifelse(VI, "library(BrailleR)", "library(knitr)") to the first chunk of the other convenience functions so the Rmd files can be converted without BrailleR being loaded. Discovered at University of Pretoria Boot Camp.
- Fixed MakeSlideshow() so that warnings for empty blank lines at the end of slides no longer appears.
- added MakeAllInOneSlide() function to be able to deliver slide show as a single file. Required for distributing talks given at DEIMS 2016


# v0.23.8
- Small changes to TwoFactors() so variable names get printed properly in tables.
- added author credentials to OneFactor(), OnePredictor(), TwoFactors(), and UniDesc().
- removed over-writing of files in example for TwoFactors(). Filenames will now indicate with or No interaction.
- dotplots in TwoFactors() have more meaningful filenames that reflect grouping variable used.
- fixed creation of ReadMe.txt in the MyBrailleR folder so that it gets the package version properly. Needed to include packageVersion() in the NAMESPACE file; also explicitly linked this command to the utils package in SetupBrailleR().
- added internal function .simpleCap() which is based on code in the example for toupper(); outcome is dependent on a new BrailleR option BrailleR.MakeUpper which is set to TRUE by default.